--- a/laravel_WargaKita/package.json
+++ b/laravel_WargaKita/package.json
@@ -15,6 +15,7 @@
         "vite": "^6.0.11"
     },
     "dependencies": {
-        "@popperjs/core": "^2.11.8"
+        "@popperjs/core": "^2.11.8",
+        "bootstrap-icons": "^1.13.1"
     }
 }
